<resources>
    <string name="app_name">ANM HealthMon</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="txtLogin">Login</string>
    <string-array name="language">
        <item>Select Language</item>
        <item>Marathi</item>
        <item>Hindi</item>
        <item>English</item>
    </string-array>
    <string name="txtRememberMe">Remember Me</string>
    <string name="txtOK">OK</string>
    <string name="txtForgotPassword">Forgot Password?</string>
    <string name="msgLoginErrorInvalidCredential">Invalid Username or Password</string>
    <string name="title_activity_landing_screen">LandingScreenActivity</string>
    <string name="title_activity_individual_patient_screen">IndividualPatientActivity</string>
    <string name="txtLastSyncNotAvaliable">Not Available</string>
    <string name="txtPatientRegistration">Register Patient</string>
    <string name="txtDashboard">Dashboard</string>
    <string name="txtAllPatients">All Patients</string>
    <string name="txtReports">Reports</string>
    <string name="txtEducation">Education</string>
    <string name="txtCollaboration">Collaboration</string>
    <string name="txtMyActivities">My Activities</string>
    <string name="txtInventory">Inventory</string>
    <string name="txtPatient">Patient</string>
    <string name="txtPatientID">Patient ID</string>
    <string name="txtProgram">Program</string>
    <string name="txtTasks">Tasks</string>
    <string name="txtTask">Task</string>
    <string name="txtAssignedto">Assigned to</string>
    <string name="txtStatus">Status</string>
    <string name="txtTodayPatient">Today\'s Patient</string>
    <string name="hinttasksearch">Search by Name, ID</string>
    <string name="txtAlerts">Alerts</string>
    <string name="txtUpcomingTask">Upcoming Task</string>
    <string name="txtLog">Log</string>
    <string name="txtEnrolledPatients">Enrolled Patients</string>
    <string name="txtExpecteddeliveries">Expected deliveries</string>
    <string name="txtHighRiskPatients">High Risk Patients</string>
    <string name="txtHighRisk">High Risk</string>
    <string name="txtModerateRisk">Moderate Risk</string>
    <string name="txtNormalRisk">Normal Risk</string>
    <string name="txtPID">PID: </string>
    <string name="txtRefered">Refered: </string>
    <string name="Refered">Refered</string>
    <string name="txtHB">HB: </string>
    <string name="txtBP">BP: </string>
    <string name="txtANC">ANC: </string>
    <string name="txtLMP">LMP: </string>
    <string name="txtEDD">EDD: </string>
    <string name="txtVisit">Visit: </string>
    <string name="txtDue">Due: </string>
    <string name="txtLast">Last: </string>
    <string name="txtIfa">IFA 2: </string>
    <string name="txtTT">TT 2: </string>
    <string name="txtMark">Mark as Follow up Visit</string>
    <string name="txtSheduleApt">Schedule Appointment</string>
    <string name="txtBMI">BMI</string>
    <string name="txtANCare">Ante Natal care</string>
    <string name="txtEditProfile">Edit Profile</string>
    <string name="txtRefer">Refer</string>
    <string name="txtTransfer">Transfer</string>
    <string name="txtReschedule">Reschedule</string>
    <string name="txtBack">Back</string>
    <string name="txtChange">Change</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtImmunization">Immunization</string>
    <string name="txtDiag">Diagnosis And Treatment</string>
    <string name="txtMedication">Medication</string>
    <string name="txtSummary">Patient Summary</string>
    <string name="txtFeedback">Patient Feedback</string>
    <string name="txtCarePlan">Care Plan</string>
    <string name="title_activity_immunization">ImmunizationActivity</string>
    <string name="title_activity_mmunization_view_all">mmunizationViewAllActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="txtSummaryView">Summary View</string>
    <string name="txtDemographics">Demographics</string>
    <string name="txtEligibility">Eligibility</string>
    <string name="txtAllergies">Allergies</string>
    <string name="txtDiagnosis">Diagnosis</string>
    <string name="txtVisitHistory">Visit History</string>
    <string name="txtMedications">Medications</string>
    <string name="txtInvestigationTests">Investigation/Tests</string>
    <string name="txtProcedures">Procedures</string>
    <string name="txtimmunizations">Immunizations</string>
    <string name="txtHRA">HRA</string>
    <string name="txtVitals">Vitals</string>
    <string name="txFeedback">Feedback</string>
    <string name="txtClear">Clear</string>
    <string name="txtFullName">Full Name</string>
    <string name="txtAgeGender">Age/Gender</string>
    <string name="txtAddressLine1">Address Line 1</string>
    <string name="txtAddressLine2">Address Line 2</string>
    <string name="txtDistrict">District</string>
    <string name="txtTaluka">Taluka</string>
    <string name="txtVillage">Village</string>
    <string name="txtWard">Ward</string>
    <string name="txtPincode">Pincode</string>
    <string name="txtEmergencyContact">Emergency Contact</string>
    <string name="txtProgramInformation">Program Information</string>
    <string name="txtSelectProgram">Select Program</string>
    <string name="txtFirstPregnancy">First Pregnancy</string>
    <string name="txtYes">Yes</string>
    <string name="txtNo">No</string>
    <string name="txtLMPDate">LMP Date</string>
    <string name="txtNotes">Notes</string>
    <string name="txtGravida">Gravida</string>
    <string name="txtParity">Parity</string>
    <string name="txtPastAbortions">Past Abortions</string>
    <string name="txtPastStillBirths">Past Still Births</string>
    <string name="txtLivingChildren">Living Children</string>
    <string name="txtSpacingBetweenChildren">Spacing Between Children</string>
    <string name="txtNatureofPreviousDelivery">Nature of Previous Delivery</string>
    <string name="txtPreviousDeliveryDate">Previous Delivery Date</string>
    <string name="txtSaveProceedtoFamilyInfo">Save &amp; Proceed to Family Info</string>
    <string name="msgErrorCheckPrgParams">Please check All pregnancy Parameters</string>
    <string name="txtCesarean">Cesarean</string>
    <string name="txtForceps">Forceps</string>
    <string name="txtVacuum">Vacuum</string>
    <string name="txtPatientInfo">Patient info</string>
    <string name="txtAddress">Address</string>
    <string name="txtFamilyInfo">Family info</string>
    <string name="txtPreview">Preview</string>
    <string name="txtBasicInfo">Basic Info</string>
    <string name="txtProgramInfo">Program Info</string>
    <string name="txtAsteriskMark">*</string>
    <string name="txtDataLoss">Your data is not saved, Do you want to continue? </string>
    <string name="txtCancel">Cancel</string>
    <string name="msgPatientRegisteredSuccessfully">Patient Registered Successfully</string>
    <string name="txtGotoPatientCard">Go to Patient Card</string>
    <string name="txtBasicInformation">Basic Information</string>
    <string name="txtMandatoryFields"> * Mandatory Fields</string>
    <string name="txtTitle">Title</string>
    <string name="txtFirstName">First Name</string>
    <string name="txtMiddleName">Middle Name</string>
    <string name="txtLastName">Last Name</string>
    <string name="txtGender">Gender</string>
    <string name="txtFemale">Female</string>
    <string name="txtMale">Male</string>
    <string name="txtDateofBirth">Date of Birth</string>
    <string name="txtAge">Age</string>
    <string name="txtPlaceofBirth">Place of Birth</string>
    <string name="txtMaritalStatus">Marital Status</string>
    <string name="txtCategory">Category</string>
    <string name="txtBPL">BPL</string>
    <string name="txtLanguage">Language</string>
    <string name="txtLiterate">Literate</string>
    <string name="txtIlliterate">Illiterate</string>
    <string name="txtIdCardType">Id Card Type</string>
    <string name="txtIdCardNumber">Id Card Number</string>
    <string name="txtContact">Mobile no</string>
    <string name="contact">Contact</string>
    <string name="txtSaveProceed">Save &amp; proceed</string>
    <string name="txtCapture">Capture</string>
    <string name="txtRationCard">Ration Card</string>
    <string name="keySalutation">Salutation:</string>
    <string name="txtRelationtoPatient">Relation to Patient</string>
    <string name="btnRegister">Register Patient</string>
    <string-array name="salutation">
        <item>Mrs</item>
        <item>Mr</item>
        <item>Miss</item>
    </string-array>
    <string-array name="marritalStatus">
        <item>Married</item>
        <item>Unmarried</item>
        <item>Divorced</item>
        <item>Separated</item>
    </string-array>
    <string name="category">Category</string>
    <string-array name="idCardType">
        <item>Aadhar Card</item>
        <item>Voter ID</item>
        <item>Pan Card</item>
        <item>Ration Card</item>
    </string-array>
    <string name="txtAadharCard">Aadhar Card</string>
    <string name="txtVoterID">Voter ID</string>
    <string name="txtPanCard">Pan Card</string>
    <string name="SaveProceedtoProgramInfo">Save &amp; proceed to Program Info</string>
    <string-array name="programs">
        <item>Ante Natal Care (ANC)</item>
        <item>Tobacco Cessation</item>
    </string-array>
    <string name="txtAnteNatalCare">Ante Natal Care (ANC)</string>
    <string name="txtTobaccoCessation">Tobacco Cessation</string>
    <string-array name="DeliveryNature">
        <item>Normal</item>
        <item>Cesarean</item>
        <item>Forceps</item>
        <item>Vacuum</item>
    </string-array>
    <string name="txtEnterValue">Please Enter Value</string>
    <string name="txtErrAddMember">Please Add Family Member</string>
    <string name="txtEnterCorrectValue">Please Enter Correct Value</string>
    <string name="msgErrorNoInternet">No Network Connection</string>
    <string name="msgCallFunctionalityNotAvailableOnDevice">Call Functionality Not Available On Device</string>
    <string name="txtDeleteConfirm">Are you sure you want to Delete?</string>
    <string name="txtClose">Close</string>
    <string name="msgPatientHighRisk">Patient is at high Risk</string>
    <string name="txtSelectatleastoneparameter">Select at least one parameter</string>
    <string name="txtNoPatientDataAvailable">No Patient Data Available</string>
    <string name="txtIncorrectDateOfBirth">Incorrect Date of Birth</string>
    <string name="txtPatientageshouldbetween18to55">Patient\'s age should between 18 to 55</string>
    <string name="txtLMPDateCanNotBeTodayDate">LMP Date Can not be Today\'s Date</string>
    <string name="txtLMPDateCanNotBeBefore9Months">LMP Date Can not be Before 9 Months</string>
    <string name="txtLMPDateCanNotBeFutureDate">LMP Date Can not be Future Date</string>
    <string name="txtPreviousDeliveryDateCanNotBeFutureDate">Previous Delivery Date Can not be Future Date</string>
    <string name="txtPreviousDeliveryCanNotBeTodayDate">Previous Delivery Can not be Today\'s Date</string>
    <string name="txtPreviousDeliveryShouldbefore10months">Previous Delivery Should be before 10 months</string>
    <string name="msgGravidaCountshouldmatchallotherparameter">Gravida Count should match all other parameter</string>
    <string name="txtAadharCardShouldbeof12Digits">Aadhar Card Should be of 12 Digits</string>
    <string name="txtRationCardShouldbeof12Digits">Ration Card Should be of 12 Digits</string>
    <string name="remove">Remove</string>
    <string name="task">Task</string>
    <string name="frequency">Frequency</string>
    <string name="role">Role</string>
    <string name="drugname">Drug Name</string>
    <string name="txtAdd">Add</string>
    <string name="txtFirstSetQuestionHeader">Medication Name</string>
</resources>