<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="300dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtErrorMsg"
        style="@style/Font17BlackNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDeleteConfirm" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/btnOk"
            style="@style/greenRoundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtYes" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/greenRoundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/txtNo" />
    </LinearLayout>
</LinearLayout>