<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/programOptionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <!-- Programs-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Font17BlackNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtSelectProgram" />

                <TextView
                    style="@style/Font17RedNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/txtAsteriskMark" />
            </LinearLayout>

            <persistent.healthmon.customviews.MultiSpinner
                android:id="@+id/multispinnerProgram"
                style="@style/spinner_style"
                android:layout_width="@dimen/stdWidthPatientRegEdttext"
                android:layout_height="@dimen/stdRowSize"
                android:entries="@array/programs"></persistent.healthmon.customviews.MultiSpinner>
        </LinearLayout>

        <Button
            android:id="@+id/btnAdd"
            style="@style/greenRoundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:text="@string/txtAdd" />
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/lstProgTamplate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/programOptionContainer"
        android:layout_marginBottom="60dp"
        android:divider="@color/colorWhite"
        android:dividerHeight="5dp"></ExpandableListView>

    <Button
        android:id="@+id/btnSaveProceed"
        style="@style/greenRoundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:text="@string/txtSaveProceed" />
</RelativeLayout>